--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,10 @@ before_script:
 script:
   - npm install
   - ng build --prod
-deploy:
-  skip_cleanup: true
-  provider: firebase
-  token:
-    secure: $FIREBASE_TOKEN
+after_success: 
+  - firebase deploy --token $FIREBASE_TOKEN
+# deploy:
+#   skip_cleanup: true
+#   provider: firebase
+#   token:
+#     secure: $FIREBASE_TOKEN
