--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,29 @@
+sudo: required
+addons:
+  chrome: stable
+language: node_js
+node_js:
+  - "10.0"
+branches:
+  only:
+    - master
+before_install:
+  - gem install rake
+before_script:
+  - npm install -g @angular/cli
+  - npm install -g "firebase-tools
+script:
+  - npm install
+  - ng build --prod
+after_success: 
+  - firebase deploy --token $FIREBASE_TOKEN
+# deploy:
+#   skip_cleanup: true
+#   provider: firebase
+#   token:
+#     secure: $FIREBASE_TOKEN
+
+# -------
 # language: node_js
 # node_js: 
 #   - "8.11.1"
@@ -19,27 +45,3 @@
 #   email: 
 #     on_failure: change
 #     on_success: change
-
-
-    sudo: required
-addons:
-  chrome: stable
-language: node_js
-node_js:
-  - "10.0"
-branches:
-  only:
-    - master
-before_script:
-  - npm install -g @angular/cli
-  - npm install -g "firebase-tools
-script:
-  - npm install
-  - ng build --prod
-after_success: 
-  - firebase deploy --token $FIREBASE_TOKEN
-# deploy:
-#   skip_cleanup: true
-#   provider: firebase
-#   token:
-#     secure: $FIREBASE_TOKEN
