--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
   only:
     - master
 before_install:
-  - gem install rake
+  # - gem install rake
 before_script:
   - npm install -g @angular/cli
   - npm install -g firebase-tools
