--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ addons:
 language: node_js
 node_js:
   - "12.2.0"
-cache: 
-    - npm
-      directories:
-        - node_modules
+# cache: 
+#     - npm
+#       directories:
+#         - node_modules
 branches:
   only:
     - master
