--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ addons:
 language: node_js
 node_js:
   - "12.2.0"
-# cache: 
-#     - npm
+cache: 
+    - npm
 #       directories:
 #         - node_modules
 branches:
